[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/manager_componets/node/ManagerComponetsNode.gd" type="Script" id=1]
[ext_resource path="res://game_objects/levels/componets/LevelData.gd" type="Script" id=2]
[ext_resource path="res://tests/game/scripts/test_level_data_componet.gd" type="Script" id=3]

[node name="test_level_data_componet" type="Node"]
script = ExtResource( 3 )

[node name="ManagerComponets" type="Node" parent="."]
script = ExtResource( 1 )

[node name="level_data" type="Node" parent="ManagerComponets"]
script = ExtResource( 2 )

[connection signal="MangerComponetsInitialize" from="ManagerComponets" to="." method="_on_ManagerComponets_MangerComponetsInitialize"]
